feature new features in bought credit card
Added save and create new button on bought with credit card, and copy option in bought list and fix issue with differer quote due the value to differ was right

Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/src/main/res/layout/buys_credit_card.xml
+++ b/app/src/main/res/layout/buys_credit_card.xml
@@ -236,6 +236,15 @@
 
 
     </LinearLayout>
+
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_save_new_one"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:icon="@android:drawable/ic_menu_save"
+                    android:text="@string/save_new"/>
+
         </LinearLayout>
 </ScrollView>
     </com.google.android.material.card.MaterialCardView>
