--- a/CreditCardModule/src/main/res/values/value.xml
+++ b/CreditCardModule/src/main/res/values/value.xml
@@ -8,12 +8,24 @@
     <string name="credit_card">Tarjeta de crédito</string>
     <string name="max_quotes">Maximas cuotas</string>
     <string name="cut_off_day">Día de corte</string>
+    <string name="days_left_until_cutoff_date">Días faltantes para fecha de corte </string>
     <string name="warning_quote_value">Alerta valor de cuota</string>
     <string name="status">Estado</string>
     <string name="active_status">Activo</string>
     <string name="disabled_status">Inactivo</string>
     <string name="interest_1_quote">No intereses a 1 cuota</string>
     <string name="interest_1not_quote">No intereses Primera cuota de varias</string>
+    <string name="to_quotes">A Cuotas</string>
+    <string name="to_one_quote">A 1 Cuota</string>
+    <string name="limit">Limite</string>
+    <string name="last_month_paid">Ultimo Mes Pagado</string>
+    <string name="capital_without_quotes">Capital Sin Cuotas</string>
+    <string name="capital_quotes">Capital Cuotas</string>
+    <string name="paids">Pagos</string>
+    <string name="periods">Periodos</string>
+    <string name="add_bought">Agregar Compra</string>
+    <string name="add_advance">Agregar Avance</string>
+    <string name="add_bought_wallet">Agregar Compra Cartera</string>
     <string name="setting_redirect">Ir a configuraciones</string>
     <string name="name">Nombre</string>
     <string name="value">Valor</string>
@@ -67,11 +79,15 @@
     <string name="navigate_credit_card">android-app://co.com.japl.finanzas.module.app/credit_card?codeCreditCard=%d</string>
     <string name="navigate_credit_card_create">android-app://co.com.japl.finanzas.module.app/credit_card</string>
     <string name="navigate_credit_card_setting_create">android-app://co.com.japl.finanzas.module.app/credit_card_setting?codeCreditCard=%d</string>
-    <string name="navigate_credit_card_setting">android-app://co.com.japl.finanzas.module.app/credit_card_setting?codeCreditCard=%d&amp;idSetting=%d</string>
+    <string name="navigate_credit_card_setting">android-app://co.com.japl.finanzas.module.app/credit_card_setting?codeSetting=%d&amp;codeCreditCard=%d</string>
     <string name="navigate_list_bought">android-app://co.com.japl.finanzas.module.app/listBought?codeCreditCard=%d&amp;cutOffDay=%d&amp;cutOff=%s</string>
     <string name="navigate_list_credit_rate">android-app://co.com.japl.finanzas.modulo.app/credit_rate</string>
     <string name="navigate_list_credit_rate_with_code_credit_card">android-app://co.com.japl.finanzas.modulo.app/credit_rate?codeCreditCard=%d</string>
     <string name="navigate_list_credit_rate_with_code_credit_card_and_cod_credit_rate">android-app://co.com.japl.finanzas.modulo.app/credit_rate?codeCreditCard=%d&amp;codeCreditRate=%d</string>
+    <string name="navigate_list_bought_period">android-app://co.com.japl.finanzas.module.app/BoughtPeriodList?codeCreditCard=%d</string>
+    <string name="navigate_bought_cash_advance">android-app://co.com.japl.finanzas.module.app/cashAdvanceBought?cod_credit_card=%d</string>
+    <string name="navigate_bought">android-app://co.com.japl.finanzas.module.app/bought?CreditCardCode=%d</string>
+    <string name="navigate_bought_wallet">android-app://co.com.japl.finanzas.module.app/boughtWalletBought?cod_credit_card=%d</string>
 
     <string-array name="Months">
         <item>--- Seleccionar --- </item>
