--- a/app/src/main/res/layout/list_credit_card_quote.xml
+++ b/app/src/main/res/layout/list_credit_card_quote.xml
@@ -1,448 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:padding="@dimen/padding_page">
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <ProgressBar
-            android:id="@+id/pb_load_qcc"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:elevation="@dimen/card_elevator_5"
-            android:progressBackgroundTint="?attr/colorPrimaryVariant"/>
-
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="@dimen/padding_page"
-            android:hint="@string/credit_card">
-        <com.google.android.material.textfield.MaterialAutoCompleteTextView
-            android:id="@+id/spCreditCardQCC"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/account"
-            android:textAlignment="center"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-
-    <LinearLayout
+    <androidx.compose.ui.platform.ComposeView
+        android:id="@+id/cv_compose_lccq"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/llTitleListCCQuote">
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/lCutOffDate"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="2"
-            style="@style/MaterialTextInputLayoutView"
-            android:hint="@string/cut_off_date" >
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/tvCutOffDate"
-            android:layout_width="match_parent"
-            android:enabled="false"
-            style="@style/MaterialTextInputLayoutView"
-            android:layout_height="wrap_content"
-            android:text="@string/date_hint"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:hint="@string/remainderCutOffDate"
-            style="@style/MaterialTextInputLayoutView">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/tvRemainderCutOffDate"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/integer_hint"
-            android:enabled="false"
-            style="@style/MaterialTextInputLayoutView"
-            android:textAlignment="textEnd"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/llTotalValueQuote"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/llRemainderCutOffDate"
-        tools:layout_editor_absoluteX="1dp">
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:prefixText="$"
-        style="@style/MaterialTextInputLayoutView"
-        android:hint="@string/quote_value">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/tvTotalValueQuote"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/money_hint"
-            android:enabled="false"
-            style="@style/MaterialTextInputLayoutView"
-            android:textAlignment="center"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            />
-    </com.google.android.material.textfield.TextInputLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/llDetailQuote"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/llTotalValueQuote">
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/lEquityValueQuote"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            style="@style/MaterialTextInputLayoutView"
-            app:prefixText="$"
-            android:hint="@string/capital_value" >
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/tvEquityValueQuote"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/money_hint"
-            style="@style/MaterialTextInputLayoutView"
-            android:enabled="false"
-            android:textAlignment="textEnd"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            app:prefixText="$"
-            style="@style/MaterialTextInputLayoutView"
-            android:hint="@string/interest_value" >
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/tvInterestValueQuote"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:enabled="false"
-            style="@style/MaterialTextInputLayoutView"
-            android:text="@string/money_hint"
-            android:textAlignment="textEnd"/>
-        </com.google.android.material.textfield.TextInputLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            style="@style/MaterialTextInputLayoutView"
-            android:hint="@string/count_items_quotes" >
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/tvNumQuotes"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/integer_hint"
-            android:enabled="false"
-            style="@style/MaterialTextInputLayoutView"
-            android:textAlignment="textEnd"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:layout_margin="@dimen/space_min"
-            style="@style/MaterialTextInputLayoutView"
-            android:hint="@string/count_items_1_quote" >
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/tvNumOneQuote"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:enabled="false"
-            style="@style/MaterialTextInputLayoutView"
-            android:text="@string/integer_hint"
-            android:textAlignment="textEnd"/>
-        </com.google.android.material.textfield.TextInputLayout>
-    </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                style="@style/MaterialTextInputLayoutView"
-                app:prefixText="$"
-                android:hint="@string/warning_quote_value">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tv_limit_lccq"
-                    android:layout_width="match_parent"
-                    android:textAlignment="textEnd"
-                    android:enabled="false"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:text="@string/money_hint"
-                    android:layout_height="wrap_content"/>
-            </com.google.android.material.textfield.TextInputLayout>
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                style="@style/MaterialTextInputLayoutView"
-                app:prefixText="$"
-                android:hint="@string/value_spend">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tv_warning_lccq"
-                    android:layout_width="match_parent"
-                    android:textAlignment="textEnd"
-                    android:enabled="false"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:text="@string/money_hint"
-                    android:layout_height="wrap_content"/>
-            </com.google.android.material.textfield.TextInputLayout>
-
-        </LinearLayout>
-
-
-<com.google.android.material.card.MaterialCardView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="@dimen/space_min">
-
-    <LinearLayout
-        android:id="@+id/llLastMonth"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/space_min"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/llItemQuotes"
-        tools:layout_editor_absoluteX="64dp">
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/MaterialTextInputLayoutView"
-                android:hint="@string/last_month_bought" >
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/tvLastMonthBought"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:enabled="false"
-                style="@style/MaterialTextInputLayoutView"
-                android:text="@string/date_hint"
-                android:textAlignment="textEnd" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-        <LinearLayout
-            android:id="@+id/llCapital"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                style="@style/MaterialTextInputLayoutView"
-                app:prefixText="$"
-                android:hint="@string/capital_quote" >
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/tvCapitalQuote"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/money_hint"
-                android:enabled="false"
-                style="@style/MaterialTextInputLayoutView"
-                android:textAlignment="textEnd"/>
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                app:prefixText="$"
-                style="@style/MaterialTextInputLayoutView"
-                android:hint="@string/capital_quotes" >
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/tvCapitalQuotes"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/money_hint"
-                android:enabled="false"
-                style="@style/MaterialTextInputLayoutView"
-                android:textAlignment="textEnd" />
-            </com.google.android.material.textfield.TextInputLayout>
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:id="@+id/llInterest"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/lbInteresLastMonth"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/last_month_interes"
-                style="@style/MaterialTextInputLayoutView"
-                app:prefixText="$">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/tvInteresLastMonth"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/money_hint"
-                android:enabled="false"
-                style="@style/MaterialTextInputLayoutView"
-                android:textAlignment="textEnd"
-                android:textStyle="bold" />
-            </com.google.android.material.textfield.TextInputLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/llTotalValue"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/lbTotalQuote"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:prefixText="$"
-                style="@style/MaterialTextInputLayoutView"
-                android:hint="@string/total_value" >
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/tvTotalQuoteLastMonth"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:enabled="false"
-                style="@style/MaterialTextInputLayoutView"
-                android:text="@string/money_hint"
-                android:textAlignment="textEnd"
-                android:textStyle="bold" />
-            </com.google.android.material.textfield.TextInputLayout>
-        </LinearLayout>
-
-    </LinearLayout>
-</com.google.android.material.card.MaterialCardView>
-
-        <co.japl.android.graphs.drawer.CustomDraw
-            android:id="@+id/cv_canvas_lccq"
-            android:layout_width="match_parent"
-            android:layout_height="400dp"/>
-
-       <LinearLayout
-            android:id="@+id/llBtnQuotes"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintBottom_toTopOf="@+id/llHistory"
-            tools:layout_editor_absoluteX="1dp">
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btnBought"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/bought" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/llHistory"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@+id/llButonsQuotes"
-            android:orientation="horizontal">
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btnBoughtHistory"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
-                app:icon="@android:drawable/ic_menu_view"
-                android:layout_weight="1"
-                android:text="@string/bought_history" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btnCutOffHistory"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:icon="@android:drawable/ic_menu_agenda"
-                android:layout_weight="1"
-                android:text="@string/cut_off_history" />
-        </LinearLayout>
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnAddItem"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
-            app:icon="@android:drawable/ic_menu_add"
-            android:text="@string/add_buy" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnAddCashAdvance"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
-            app:icon="@android:drawable/ic_menu_add"
-            android:text="@string/add_cash_advance" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnAddBuyWalletLCCQ"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
-            app:icon="@android:drawable/ic_menu_add"
-            android:text="@string/add_buy_wallet" />
-
-    </LinearLayout>
-
-    </ScrollView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        />
+</LinearLayout>
