feature nmigration wallet bought credit card
migrate interface form of wallet bought with credit card

Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/src/main/res/layout-land/buys_credit_card.xml
+++ b/app/src/main/res/layout-land/buys_credit_card.xml
@@ -280,6 +280,15 @@
             android:text="@string/save"
             app:icon="@android:drawable/ic_menu_save" />
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_save_new_one"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/space_min"
+            android:layout_weight="1"
+            app:icon="@android:drawable/ic_menu_save"
+            android:text="@string/save_new"/>
+
     </LinearLayout>
         </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
