--- a/app/src/main/res/layout/buy_wallet_credit_card.xml
+++ b/app/src/main/res/layout/buy_wallet_credit_card.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,216 +7,10 @@
     android:layout_gravity="center_vertical"
     android:layout_margin="@dimen/padding_page"
     android:orientation="vertical">
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    <com.google.android.material.card.MaterialCardView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:cardCornerRadius="@dimen/radius_corner"
-        app:strokeWidth="@dimen/stroke_with"
-        app:cardElevation="@dimen/card_elevator">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="@dimen/space_min"
-            android:orientation="vertical">
 
-            <LinearLayout
-        android:id="@+id/llCreditCardAssignCACC"
+    <androidx.compose.ui.platform.ComposeView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
-        tools:layout_editor_absoluteX="0dp">
+        android:id="@+id/cv_wallet_bwcc"/>
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/lCreditCardAssignCACC"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="@string/assing_credit_Card"
-            style="@style/MaterialTextInputLayoutView">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etCreditCardAssignBWCC"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:enabled="false"
-            style="@style/MaterialTextInputLayoutView"
-            android:hint="@string/assing_credit_Card"
-            android:textAlignment="center"/>
-        </com.google.android.material.textfield.TextInputLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/llDateCACC"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/llCreditCardAssignCACC">
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/lDateCACC"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/space_min"
-            app:endIconMode="clear_text"
-            android:hint="@string/bought_date_time">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/dtBoughtBWCC"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="date"
-            android:drawableStart="@drawable/ic_baseline_calendar_month_24"
-            android:textAlignment="textEnd" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout3CACC"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="1dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/llDateCACC"
-        tools:layout_editor_absoluteX="0dp">
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:endIconMode="clear_text"
-            android:padding="@dimen/space_min"
-            android:hint="@string/product_name">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etNameItemBWCC"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-        </com.google.android.material.textfield.TextInputLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linerLayoutValuesCACC"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="1dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3CACC"
-        tools:layout_editor_absoluteX="1dp">
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="@dimen/space_min"
-            app:endIconMode="clear_text"
-            app:prefixText="$"
-            android:hint="@string/product_value">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etProductValueBWCC"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:ems="10"
-            android:inputType="numberSigned|numberDecimal"
-            android:singleLine="false"/>
-        </com.google.android.material.textfield.TextInputLayout>
-    </LinearLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/tax"
-            android:textAlignment="viewStart"
-            app:suffixText="%"
-            style="@style/MaterialTextInputLayoutView"
-            android:textStyle="bold" >
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etTaxBoughtBWCC"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:enabled="false"
-            android:ems="10"
-            android:text="0.0"
-            style="@style/MaterialTextInputLayoutView"
-            android:inputType="numberSigned"
-            android:textAlignment="center" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/green_light_trans"
-            android:hint="@string/months"
-            style="@style/MaterialTextInputLayoutView"
-            android:textStyle="bold" >
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/tvMontBWCC"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/MaterialTextInputLayoutView"
-            android:text="@string/months_number_hint"
-            android:textAlignment="center"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/lQuoteValueCACC"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/green_light_trans"
-            android:hint="@string/quotes_value"
-            app:prefixText="$"
-            style="@style/MaterialTextInputLayoutView"
-            android:textStyle="bold" >
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etQuoteValueBWCC"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:enabled="false"
-            style="@style/MaterialTextInputLayoutView"
-            android:text="@string/money_hint"
-            android:inputType="number|textPersonName"
-            android:textAlignment="center" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="1dp">
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnClearBoughtBWCC"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_margin="@dimen/space_min"
-            android:text="@string/clear"
-            app:icon="@drawable/ic_baseline_cleaning_services_24" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnSaveBoughtBWCC"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/space_min"
-            android:layout_weight="1"
-            android:text="@string/save"
-            app:icon="@android:drawable/ic_menu_save" />
-
-
-    </LinearLayout>
-        </LinearLayout>
-    </com.google.android.material.card.MaterialCardView>
-    </ScrollView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
