--- a/ui/src/main/res/values/value.xml
+++ b/ui/src/main/res/values/value.xml
@@ -4,4 +4,5 @@
     <string name="ok">Ok</string>
     <string name="clear">Limpiar</string>
     <string name="see_more">Ver más</string>
+    <string name="close">Cerrar</string>
 </resources>
