--- a/CreditCardModule/src/main/res/values/value.xml
+++ b/CreditCardModule/src/main/res/values/value.xml
@@ -8,6 +8,8 @@
     <string name="credit_card">Tarjeta de crédito</string>
     <string name="max_quotes">Maximas cuotas</string>
     <string name="cut_off_day">Día de corte</string>
+    <string name="name_product">Nombre del Producto</string>
+    <string name="value_product">Valor del Producto</string>
     <string name="days_left_until_cutoff_date">Días faltantes para fecha de corte </string>
     <string name="warning_quote_value">Alerta valor de cuota</string>
     <string name="status">Estado</string>
@@ -43,6 +45,7 @@
     <string name="capital_value_short">Capital</string>
     <string name="capital_value">Valor a capital</string>
     <string name="interest_value">Valor a intereses</string>
+    <string name="quote_value">Valor Cuota</string>
     <string name="total_value">Valor total</string>
     <string name="total_quote">Total cuota</string>
 
@@ -74,6 +77,7 @@
     <string name="toast_dont_successful_enabled">No se logro habilitar el registro</string>
     <string name="toast_successful_disabled">Se ha desabilitado el registro satisfactoriamente</string>
     <string name="toast_dont_successful_disabled">No se logro desabilitar el registro</string>
+    <string name="toast_credit_rate_is_not_setting">La tasa del credito no esta configurada</string>
 
     <string name="navigate_list_credit_card_setting">android-app://co.com.japl.finanzas.module.app/list_credit_card_setting?codeCreditCard=%d</string>
     <string name="navigate_credit_card">android-app://co.com.japl.finanzas.module.app/credit_card?codeCreditCard=%d</string>
